# 404-ZOO

./: .gitignore  README.md  start.bat
404-backend/: .env.example  README.md  package-lock.json  package.json
404-backend/src/: contract.js  server.js
404-contract/: Cargo.toml  DEPLOYMENT.md  README.md
404-contract/src/: lib.rs
404-zoo/: index.html  package-lock.json  package.json
404-zoo/src/: App.css  App.tsx  index.css
404-zoo/src/components/: ArenaBattle.tsx  Backpack.tsx  Battle.tsx  ConnectWallet.tsx  DrawerMenu.tsx  GachaPage.tsx  Leaderboard.tsx  MainLayout.tsx  Marketplace.tsx  Model3DViewer.tsx  Pokedex.tsx  TeamBuilder.tsx  UserProfile.tsx
404-zoo/src/css/: ArenaBattle.css  Backpack.css  Battle.css  ConnectWallet.css  DrawerMenu.css  GachaPage.css  Leaderboard.css  LoadingScreen.css  MainLayout.css  Marketplace.css  Model3DViewer.css  Pokedex.css  TeamBuilder.css  UserProfile.css
404-zoo/src/services/: battleSocket.ts  cardCache.ts  contract.ts  playerDataCache.ts
