[package]
name = "zoo-contract"
version = "0.1.0"
description = "404 ZOO - Card-based merge tactics game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zoo_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
proptest = "1.4.0"
